--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>MikolajKalejta</title>
 </head>
 <body>
-
+        <h1>
+            Hello World!
+        </h1>
 </body>
 </html>
