--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MikolajKalejta</title>
+    <title>MK_Page</title>
 </head>
 <body>
-        <h1>
-            Hello World!
-        </h1>
+        <h1>Kasparov's draw with deep blue!</h1>
+        <p>Deep Blue versus Garry Kasparov was a pair of six-game chess matches between the world chess
+            champion Garry Kasparov and an IBM supercomputer called Deep Blue. The first match was
+            played in Philadelphia in 1996 and won by Kasparov by 4–2. A rematch was played in
+            New York City in 1997 and won by Deep Blue by 3½–2½. The second match was the first
+            defeat of a reigning world chess champion by a computer under tournament conditions,
+            and was the subject of a documentary film, Game Over: Kasparov and the Machine.<p/>
+
 </body>
 </html>
