--- a/index.html
+++ b/index.html
@@ -5,13 +5,67 @@
     <title>MK_Page</title>
 </head>
 <body>
-        <h1>Kasparov's draw with deep blue!</h1>
-        <p>Deep Blue versus Garry Kasparov was a pair of six-game chess matches between the world chess
-            champion Garry Kasparov and an IBM supercomputer called Deep Blue. The first match was
-            played in Philadelphia in 1996 and won by Kasparov by 4–2. A rematch was played in
-            New York City in 1997 and won by Deep Blue by 3½–2½. The second match was the first
-            defeat of a reigning world chess champion by a computer under tournament conditions,
+<h1>Kasparov's draw with deep blue!</h1>
+        <p>Deep Blue versus Garry Kasparov was a pair of six-game chess matches between the world chess<br>
+            champion Garry Kasparov and an IBM supercomputer called Deep Blue. The first match was<br>
+            played in Philadelphia in 1996 and won by Kasparov by 4–2. A rematch was played in<br>
+            New York City in 1997 and won by Deep Blue by 3½–2½. The second match was the first<br>
+            defeat of a reigning world chess champion by a computer under tournament conditions,<br>
             and was the subject of a documentary film, Game Over: Kasparov and the Machine.<p/>
 
+<a href="https://youtu.be/NJarxpYyoFI" >End game phase</a>
+<h2>The 1996 match</h2>
+<table>
+  <tr>
+    <th>#Game</th>
+    <th>White</th>
+    <th>Black</th>
+    <th>Result</th>
+    <th>Method of conclusion</th>
+  </tr>
+  <tr>
+    <td>1.</td>
+    <td>Deep Blue</td>
+    <td>Kasparov</td>
+    <td>1 - 0</td>
+    <td>Resignation</td>
+  </tr>
+  <tr>
+    <td>2.</td>
+    <td>Kasparov</td>
+    <td>Deep Blue</td>
+    <td>1 - 0</td>
+    <td>Resignation</td>
+  </tr>
+  <tr>
+    <td>3.</td>
+    <td>Deep Blue</td>
+    <td>Kasparov</td>
+    <td>1/2 - 1/2</td>
+    <td>Draw by mutual agreement</td>
+  </tr>
+  <tr>
+    <td>4.</td>
+    <td>Kasparov</td>
+    <td>Deep Blue</td>
+    <td>1/2 - 1/2</td>
+    <td>Draw by mutual agreement</td>
+  </tr>
+  <tr>
+    <td>5.</td>
+    <td>Deep Blue</td>
+    <td>Kasparov</td>
+    <td>0 - 1</td>
+    <td>Resignation</td>
+  </tr>
+  <tr>
+    <td>6.</td>
+    <td>Kasparov</td>
+    <td>Deep Blue</td>
+    <td>1 - 0</td>
+    <td>Resignation</td>
+  </tr>
+
+</table>
 </body>
 </html>
