--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 </head>
 <body>
 <h1>Kasparov's draw with deep blue!</h1>
-            played in Philadelphia in 1996 and won by Kasparov by 4–2. A rematch was played in<br>
-            New York City in 1997 and won by Deep Blue by 3½–2½. The second match was the first<br>
-            defeat of a reigning world chess champion by a computer under tournament conditions,<br>
-            and was the subject of a documentary film, Game Over: Kasparov and the Machine.<p/>
+        <p>
+          Deep Blue versus Garry Kasparov was a pair of six-game chess matches between the world chess<br>
+          champion Garry Kasparov and an IBM supercomputer called Deep Blue. The first match was<br>
+          played in Philadelphia in 1996 and won by Kasparov by 4–2. A rematch was played in<br>
+          New York City in 1997 and won by Deep Blue by 3½–2½. The second match was the first<br>
+          defeat of a reigning world chess champion by a computer under tournament conditions,<br>
+          and was the subject of a documentary film, Game Over: Kasparov and the Machine.
+        </p>
 
-<a href="https://youtu.be/NJarxpYyoFI" >End game phase</a>
 <h2>The 1996 match</h2>
 <table>
   <tr>
@@ -63,6 +66,9 @@
     <td>1 - 0</td>
     <td>Resignation</td>
   </tr>
+
+
+<h5>Link to a very last phase:</h5> <a href="https://youtu.be/NJarxpYyoFI" >End game phase</a>
 
 </table>
 </body>
