--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>MK_Page</title>
 </head>
 <body>
-<h1>Kasparov's draw with deep blue!</h1>
+<h1>Kasparov's draw with deep blue!</h1> <img src="GarryVsDeepBlue.jpg" alt="FrontPage">
         <p>
           Deep Blue versus Garry Kasparov was a pair of six-game chess matches between the world chess<br>
           champion Garry Kasparov and an IBM supercomputer called Deep Blue. The first match was<br>
