--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
       border: 1px solid;
     }
     </style>
+    <style>
     img.right {
     margin-right: 0px;
     margin-left: auto;
     }
+    </style>
 </head>
 <body>
 <h1>Kasparov's draw with deep blue!</h1>
