--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     div {
     width: 100%;
     height: 400px;
-    background-image: url('img_flowers.jpg');
+    background-image: url('https://www.bing.com/images/search?view=detailV2&ccid=lMHi088R&id=3DF284033EE18FB7EACB0A096D09B27200F38E99&thid=OIP.lMHi088RTWsKLFMil1WZZQHaFI&mediaurl=https%3a%2f%2fbloximages.chicago2.vip.townnews.com%2fmadison.com%2fcontent%2ftncms%2fassets%2fv3%2feditorial%2f7%2f8c%2f78c157e0-f2d5-11e6-bb53-af1314cc5001%2f58a334f6e3bfe.image.jpg%3fresize%3d1200%252C831&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.94c1e2d3cf114d6b0a2c532297559965%3frik%3dmY7zAHKyCW0JCg%26pid%3dImgRaw%26r%3d0&exph=831&expw=1200&q=garry+kasparov+vs+deep+blue&simid=607999256026891589&FORM=IRPRST&ck=ACC17C650C13AA8A82902CDD253CD771&selectedIndex=4');
     background-repeat: no-repeat;
     background-size: contain;
-    border: 1px solid red;
-    }
     }
     </style>
 </head>
