--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <title>MK_Page</title>
     <style>
-      table, th, td {
-      border: 1px solid;
+    table, th, td {
+    border: 1px solid;
     }
     img {
     float: right;
+    }
+    a:link {
+    color:green;
+    }
+    a:visited {
+    color:green;
+    }
+    a:hover {
+    color:red;
     }
     </style>
 </head>
